--- a/css/style.css
+++ b/css/style.css
@@ -30,8 +30,9 @@ body {
 	position: absolute;
 	z-index: 3;
 	opacity: .8;
-	top: 0px;
-	text-align: center;
+	bottom: 0px;
+	left:50%;
+	
 }
 
 .thumbnail {
@@ -72,7 +73,8 @@ body {
 /*Add CSS styles to rotate the element 90deg
 Make it animate nicely. You'll need CSS3 for this*/
 .rot90 {
-	
+	transition: transform 1s ease;
+	transform: rotate(90deg);
 } 
 
 /*Add CSS styles to rotate the element 180deg
@@ -81,4 +83,7 @@ Make it animate nicely. You'll need CSS3 for this*/
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot270 {}
+.rot270 {
+	transition: transform 1s ease;
+	transform: rotate(270deg);
+}
