--- a/css/style.css
+++ b/css/style.css
@@ -31,12 +31,13 @@ body {
 	z-index: 3;
 	opacity: .8;
 	bottom: 0px;
-	left:50%;
-	
+	left: 50%;
 }
 
 .thumbnail {
 	position: relative;
+	max-width: 100%;
+	max-height: 100%;
 	box-shadow: 1px 3px 20px 0px;
 }
 
@@ -60,6 +61,10 @@ body {
 	height: 42px;
 	width: 42px;
 }
+#nav #prevPhoto:hover,
+#nav #nextPhoto:hover {
+	opacity: 0.8;
+}
 
 .details p {
 	margin-top: 20px;
@@ -75,11 +80,13 @@ Make it animate nicely. You'll need CSS3 for this*/
 .rot90 {
 	transition: transform 1s ease;
 	transform: rotate(90deg);
-} 
+}
 
 /*Add CSS styles to rotate the element 180deg
 Make it animate nicely. You'll need CSS3 for this*/
-.rot180 {}
+.rot180 {
+	transform: rotate(180deg);
+}
 
 /*Add CSS styles to rotate the element 270deg
 Make it animate nicely. You'll need CSS3 for this*/
