--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,9 @@
 body {
 	overflow: auto;
-	font-family: 'Century Gothic', sans-serif;
-	background-image: url(../img/geometry.jpg);
+	font-family:'Courier New', Courier, monospace;
+	font-size: 35;;
+	background-image: url(/img/https://cdn.pixabay.com/photo/2017/06/13/13/51/marble-2398946_640.jpg);
+	
 }
 
 #photoBooth {
@@ -10,7 +12,7 @@ body {
 	width: 650px;
 	margin-left: auto;
 	margin-right: auto;
-	background-color: white;
+	background-color: lightblue;
 	border-radius: 2px;
 }	
 
